2003-09-30  Carl Worth  <cworth@east.isi.edu>

	* configure.in: Bumped version to 0.1.7 to indicate change in
	cairo_copy.

	* src/cairo.c (cairo_copy): Changed cairo_copy to copy graphics
	state from one cairo_t to another rather than allocating a new
	cairo_t.

	* src/cairo_surface.c (cairo_surface_destroy):
	(cairo_surface_create_similar_solid): Fix to delay XFreePixmap
	until cairo_surface_destroy.

2003-09-29  Carl Worth  <cworth@east.isi.edu>

	* TODO: Remove arc notes since arcs are done.

	* src/cairo_surface.c (_cairo_surface_composite): Fix bug
	(IcImageGetHeight instead of IcImageGetWidth) from Graydon Hoare
	<graydon@redhat.com>.

2003-09-29  Carl Worth  <cworth@isi.edu>

	* configure.in (CAIRO_VERSION): Bumpred version to 0.1.6 to
	indicate new cairo_arc and cairo_arc_negative.

	* src/cairo_gstate.c (_arc_error_normalized):
	(_arc_max_angle_for_tolerance_normalized):
	(_cairo_gstate_arc_segments_needed):
	(_cairo_gstate_arc_segment):
	(_cairo_gstate_arc_dir):
	(_cairo_gstate_arc):
	(_cairo_gstate_arc_negative): Several new functions to implement
	arc support.

	* src/cairo.h: Added cairo_arc and cairo_arc_negative.

	* src/cairo.c (cairo_arc): 
	(cairo_arc_negative): Added new arc support.

2003-09-27  Carl Worth  <cworth@isi.edu>	

	* src/cairoint.h: Fixed several enum symbols that had been
	mistakenly converted to lowercase at some point.
	Consolidated cairo_path_direction_t and
	cairo_pen_stroke_direction_t into cairo_direction_t.
	Removed accidental addition of two _print_svg functions that had
	been used for debugging temporarily.
	
2003-09-25  Carl Worth  <cworth@isi.edu>

	* configure.in (CAIRO_VERSION): Bumped version to 0.1.5 to
	indicate removal of cairo_path_t and related functions.

	* src/cairo.h: Decided that we don't actually need any of the
	cairo_path_t functionality exposed in the commit earlier
	today. Ripped all of that back out.

	* configure.in (CAIRO_VERSION): Bumped version to 0.1.4 for new