@@ -1,5 +1,12 @@
 2003-09-30  Carl Worth  <cworth@east.isi.edu>
 
+	* src/cairo_gstate.c (_cairo_gstate_init_copy): Be careful to
+	preserve gstate->next.
+	(_cairo_gstate_copy): New function to support cairo_copy.
+
+	* src/cairo.c (cairo_copy): Fixed horribly botched implementation
+	of cairo_copy.
+
 	* configure.in: Bumped version to 0.1.7 to indicate change in
 	cairo_copy.
 
